// Copyright 2021 JanusGraph Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package janusgraph.schema.v1;

import "janusgraph/types/v1/graph_types.proto";
import "janusgraph/types/v1/schema_types.proto";

option java_multiple_files = true;
option java_package = "org.janusgraph.graphdb.grpc.schema";


message GetVertexLabelByNameRequest {
    janusgraph.types.v1.JanusGraphContext context = 1;
    string name = 2;
}

message GetVertexLabelByNameResponse {
    janusgraph.types.v1.VertexLabel vertex_label = 1;
}

message GetVertexLabelsRequest {
    janusgraph.types.v1.JanusGraphContext context = 1;
}

message GetVertexLabelsResponse {
    repeated janusgraph.types.v1.VertexLabel vertex_labels = 1;
}

message GetEdgeLabelByNameRequest {
    janusgraph.types.v1.JanusGraphContext context = 1;
    string name = 2;
}

message GetEdgeLabelByNameResponse {
    janusgraph.types.v1.EdgeLabel edge_label = 1;
}

message GetEdgeLabelsRequest {
    janusgraph.types.v1.JanusGraphContext context = 1;
}

message GetEdgeLabelsResponse {
    repeated janusgraph.types.v1.EdgeLabel edge_labels = 1;
}

service SchemaManagerService {
    rpc GetVertexLabelByName(GetVertexLabelByNameRequest) returns (GetVertexLabelByNameResponse);
    rpc GetVertexLabels(GetVertexLabelsRequest) returns (GetVertexLabelsResponse);
    rpc GetEdgeLabelByName(GetEdgeLabelByNameRequest) returns (GetEdgeLabelByNameResponse);
    rpc GetEdgeLabels(GetEdgeLabelsRequest) returns (GetEdgeLabelsResponse);
}
